--- a/barrett_hand_sim/barrett_hand_control/package.xml
+++ b/barrett_hand_sim/barrett_hand_control/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>barrett_hand_control</name>
-  <version>0.1.0</version>
+  <version>1.1.0</version>
   <description>The barrett_hand_control package is intended to control the gazebo simulation of the barrett hand</description>
 
-  <maintainer email="egambaro@robotnik.es">elena</maintainer>
+  <maintainer email="lgao1@unm.edu">Longsen Gao</maintainer>
   
   <url type="website">http://wiki.ros.org/barrett_hand_control</url>
-  <url type="repository">https://github.com/RobotnikAutomation/barrett_hand_sim.git</url>
+  <url type="repository">https://github.com/gaolongsen/Barrett-Hand/tree/main/barrett_hand_sim.git</url>
   <url type="bugtracker">https://github.com/RobotnikAutomation/barrett_hand_sim/issues</url>
 
   <license>BSD</license>
