--- a/barrett_hand_sim/barrett_hand_gazebo/package.xml
+++ b/barrett_hand_sim/barrett_hand_gazebo/package.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <package>
   <name>barrett_hand_gazebo</name>
-  <version>0.1.0</version>
+  <version>1.1.0</version>
   <description>The barrett_hand_gazebo package</description>
 
-  <maintainer email="egambaro@robotnik.es">elena</maintainer>
+  <maintainer email="lgao1@unm.edu">Longsen Gao</maintainer>
 
   <license>BSD</license>
 
   <url type="website">http://wiki.ros.org/barrett_sim_gazebo</url>
-  <url type="repository">https://github.com/RobotnikAutomation/barrett_hand_sim.git</url>
+  <url type="repository">https://github.com/gaolongsen/Barrett-Hand/tree/main/barrett_hand_sim.git</url>
   <url type="bugtracker">https://github.com/RobotnikAutomation/barrett_hand_sim/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
